# PathNavigator

./: .buildinfo  LICENSE  README.md  ReleaseNote.md  genindex.html  index.html  justfile  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: docs.yml  python-app.yml  test.yml
_sources/: index.rst.txt
_sources/source/: modules.rst.txt  pathnavigator.rst.txt
_static/: documentation_options.js
docs/: conf.py  index.rst
docs/source/: pathnavigator.rst
path_manager/: __init__.py  path_manager.py
pathmanager/: __init__.py  pathmanager.py
pathmanager/archive/: pathmanager_archive.py
pathmanager/test/: test.py
source/: modules.html  pathnavigator.html
src/pathmanager/: __init__.py
src/pathnavigator/: __init__.py  att_name_convertor.py  folder.py  pathnavigator.py  shortcut.py  utils.py
test/: test.py  test_pn.py
