[project]
name = "pathmanager"
version = "0.0.1"
authors = [
    {name = "Chung-Yi Lin", email = "philip928lin@gmail.com"}
]
license = { file = "LICENSE" }
description = "file: README.md"
dependencies = []

[project.optional-dependencies]
dev = [
    "ipython",
]
lint = [
    "pre-commit>=2.20.0",
]

# tools
[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
